# squirrel-core

./: .coveragerc  .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  CLA.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  Untitled.ipynb  cla.yml  pyproject.toml  pytest.ini  requirements.azure.in  requirements.dask.in  requirements.dev.in  requirements.doc.in  requirements.excel.in  requirements.gcp.in  requirements.in  requirements.parquet.in  requirements.txt  requirements.zarr.in  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cla.yml  codeql-analysis.yml  main.yaml  stale_prs.yml
docker/: Dockerfile  Dockerfile.dev
docs/: .gitignore  conf.py  index.rst
docs/advanced/: caching.rst  iterstream.rst  randomness.rst  store.rst
docs/basic/: driver.rst
docs/developer/: code_of_conduct.rst  contribute.rst  glossary.rst
docs/examples/: catalog_so_update.py  create_imagenette.py  create_sq_ds_from_hf.py  msgpack_caching.py  squirrel_dali.ipynb
docs/getting_started/: installation.rst  introduction.rst  quickstart.rst  tutorials.rst
docs/integration/: dask.rst  integration.rst  monitoring.rst  monitoring_mlflow_wandb.rst  pytorch.rst  spark.rst  squirrel_datasets_drivers.rst
docs/usage/: Iterstream.rst  architecture_overview.rst  catalog.rst  contribute.rst  document.rst  driver.rst  glossary.rst  iterstream.rst  low_level_apis.rst  store.rst  zarr.rst
docs/usage/low_level_apis/: datasets.rst  iterstream.rst  metrics.rst  squirrel_fsspec.rst  zarr.rst
docs/usage/low_level_apis/caching/: append_log.rst
docs/usage/low_level_apis/dataset/: abstract_dataset.rst  csv_dataset.rst  stream_dataset.rst  zarr_dataset.rst
docs/usage/low_level_apis/zarr/: convenience.rst  fsspec.rst  group.rst  key.rst  store.rst
examples/: CatalogAPI.ipynb  Squirrel_Tutorial_Create_Squirrel_Store.ipynb  Squirrel_Tutorial_Getting_Started.ipynb  Squirrel_Tutorial_Plugins.ipynb  Squirrel_Tutorial_PytorchLightning_Model_Training.ipynb  Squirrel_Tutorial_Pytorch_Model_Training.ipynb  Squirrel_Tutorial_SquirrelStore_with_Spark&Dask.ipynb
infrastructure/docker/: Dockerfile
signatures/version1/: cla.json
squirrel/: __init__.py  constants.py  py.typed
squirrel/artifact_manager/: __init__.py  base.py  drivers.py  filesystem.py  fs.py  wandb.py
squirrel/artifact_manager/fs/: fs_artifact_manager.py
squirrel/benchmark/: msgpack_caching.py  quantify_randomness.py
squirrel/caching/: append_log.py  cache.py
squirrel/catalog/: __init__.py  catalog.py  source.py  yaml.py
squirrel/dataset/: csv_dataset.py  dataset.py  stream_dataset.py  zarr_dataset.py
squirrel/driver/: __init__.py  csv.py  csv_driver.py  custom_driver.py  data_frame.py  data_frame_file.py  data_frame_file_driver.py  deltalake.py  directory.py  driver.py  excel.py  feather.py  feather_driver.py  file.py  file_driver.py  json.py  json_driver.py  jsonl.py  msgpack.py  parquet.py  parquet_driver.py  quantify_randomness.py  source_combiner.py  store.py  store_driver.py  streaming_parquet.py  xls.py  xls_driver.py  zarr.py
squirrel/framework/: exceptions.py  io.py
squirrel/framework/plugins/: __init__.py  hookimpl.py  hookspec.py  plugin_manager.py
squirrel/fsspec/: __init__.py  custom_gcsfs.py  fs.py
squirrel/integration_test/: conftest.py  helpers.py  shared_fixtures.py
squirrel/integration_test/test_jsonl/: test_torch_distibuted_loading.py
squirrel/integration_test/test_zarr/: test_zarr_dataset.py
squirrel/iterstream/: __init__.py  base.py  dali_composables.py  iterators.py  metrics.py  multiplexer.py  source.py  torch_composables.py
squirrel/serialization/: __init__.py  jsonl.py  msgpack.py  np.py  parquet.py  png.py  serializer.py
squirrel/store/: __init__.py  deltalake.py  directory_store.py  filesystem.py  parquet_store.py  squirrel_store.py  store.py
squirrel/zarr/: __init__.py  convenience.py  group.py  key.py  sharding.py  store.py  sync.py
test/: conftest.py  payload.json  randomness.ipynb  test_dummy.py
test/benchmark/: msgpack_caching.py
test/integration_test/: conftest.py  shared_fixtures.py
test/test_artifact_manager/: test_fs_logging.py  test_logging.py  wandb_script.py
test/test_artifact_manager/my_collection/folder/: bar.txt  baz.txt  foo.txt
test/test_benchmark/: test_quantify_randomness.py
test/test_caching/: test_append_log.py  test_cache.py
test/test_catalog/: test_catalog.py
test/test_driver/: test_cache.py  test_caching.py  test_csv.py  test_data_frame.py  test_deltalake.py  test_directory_driver.py  test_jsonl.py  test_msgpack.py  test_parquet_driver.py  test_quantify_randomness.py  test_sourcecombiner.py  test_sq_store.py  test_zarr.py
test/test_fsspec/: test_custom_fs.py
test/test_iterstream/: test_dali_composables.py  test_get_size.py  test_multiplexing.py  test_stream.py  test_torch_composables.py
test/test_zarr/: test_zarr_group.py  test_zarr_sharding.py  test_zarr_store.py
