[tool.poetry]
name = "squirrel-core"
version = "0.19.0"
description = "Squirrel is a Python library that enables ML teams to share, load, and transform data in a collaborative, flexible and efficient way."
authors = ["Merantix Momentum"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "squirrel"}]
homepage = "https://merantix-momentum.com/technology/squirrel/"
repository = "https://github.com/merantix-momentum/squirrel-core"
documentation = "https://squirrel-core.readthedocs.io/en/latest/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Typing :: Typed",
]

[tool.poetry.plugins."fsspec.specs"]
"gs" = "squirrel.fsspec.custom_gcsfs.CustomGCSFileSystem"

[tool.poetry.dependencies]
python = "^3.8"
fsspec = ">=2021.7.0"
msgpack = "^1.0.4"
msgpack-numpy = "^0.4.8"
more-itertools = "^9.0.0"
pluggy = "^1.0.0"
random-name = "^0.1.1"
ruamel-yaml = "^0.17.21"
tqdm = "^4.64.1"
numba = "^0.56.4"
numpy = "^1.23.5"
pyjwt = "^2.4.0"
mako = "^1.2.2"
oauthlib = "^3.2.1"
aiohttp = "^3.7.4"
adlfs = {version = "<2021.10", optional = true}
dask = {version = ">=2021.7.0", optional = true, extras = ["dataframe", "distributed"]}
odfpy = {version = "^1.4.1", optional = true}
openpyxl = {version = "^3.1.1", optional = true}
pyxlsb = {version = "^1.0.10", optional = true}
xlrd = {version = "^2.0.1", optional = true}
gcsfs = {version = ">=2021.7.0", optional = true}
s3fs = {version = ">=2021.7.0", optional = true}
torch = {version = "^1.13.1", optional = true}
zarr = {version = "^2.10.3", optional = true}
pyarrow = {version = "^10.0.1", optional = true}

[tool.poetry.group.dev.dependencies]
twine = "^4.0.2"
wheel = "^0.38.4"
pytest = "^6.2.1"
pytest-timeout = "^2.1.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.2.0"
wandb = "^0.13.10"
mlflow = "^2.1.1"
pre-commit = "^2.16.0"
pip-tools = "^6.6.2"
black = "22.8.0"
autopep8 = "1.7.0"

[tool.poetry.group.doc.dependencies]
sphinx = "<4.0.0"
jinja2 = "<3.1"
click = "<8.1"
sphinx-versions = "^1.1.3"
sphinx-rtd-theme = "^1.2.0"
sphinx-autoapi = "^1.9.0"
sphinxcontrib-mermaid = "^0.8"
myst-nb = "^0.15.0"

[tool.poetry.extras]
azure = ["adlfs"]
dask = ["dask"]
excel = ["odfpy", "openpyxl", "pyxlsb", "xlrd"]
feather = ["pyarrow"]
gcp = ["gcsfs"]
parquet = ["pyarrow"]
s3 = ["s3fs"]
torch = ["torch"]
zarr = ["zarr"]
all = ["adlfs", "dask", "odfpy", "openpyxl", "pyxlsb", "xlrd", "pyarrow", "gcsfs", "s3fs", "torch", "zarr"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 120
ignore="E265,E501,E203"
in-place = true
recursive = true

[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = [
    "test",
    "squirrel/integration_test",
]
addopts = "-p no:warnings -v"
norecursedirs = [
    ".*",
    "build",
    "dist",
    "CVS",
    "_darcs",
    "{arch}",
    "*.egg",
]
