[tool.poetry]
name = "squirrel-core"
version = "0.19.6"
description = "Squirrel is a Python library that enables ML teams to share, load, and transform data in a collaborative, flexible and efficient way."
authors = ["Merantix Momentum"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "squirrel"}]
homepage = "https://merantix-momentum.com/technology/squirrel/"
repository = "https://github.com/merantix-momentum/squirrel-core"
documentation = "https://squirrel-core.readthedocs.io/en/latest/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Typing :: Typed",
]

[tool.poetry.plugins."fsspec.specs"]
"gs" = "squirrel.fsspec.custom_gcsfs.CustomGCSFileSystem"

[tool.poetry.dependencies]
python = "^3.8"
fsspec = ">=2023.12.2"
msgpack = ">=1.0.7"
msgpack-numpy = ">=0.4.8"
more-itertools = ">=10.1.0"
pluggy = ">=1.3.0"
ruamel-yaml = ">=0.18.5"
tqdm = ">=4.66.1"
numpy = "^1.23.5"
pyjwt = ">=2.8.0"   # dependabot: GHSA-ffqj-6fqr-9h24
mako = ">=1.3.0"    # dependabot: GHSA-v973-fxgf-6xhp
oauthlib = ">=3.2.2"   # dependabot: GHSA-3pgj-pg6c-r5p7
aiohttp = ">=3.9.1"    # dependabot: GHSA-q3qx-c6g2-7pw2
urllib3 = "1.26.16"    # pin for faster resolution, follows from current versions of s3fs
pandas = ">=1.2.0"    # pin for dask compatibility
numba = {version = "^0.56.4", optional = true}
adlfs = {version = ">=2023.10.0", optional = true}
dask = {version = "^2023.4.0", optional = true, extras = ["dataframe", "distributed"]}
odfpy = {version = ">=1.4.1", optional = true}
openpyxl = {version = ">=3.1.1", optional = true}
pyxlsb = {version = ">=1.0.10", optional = true}
xlrd = {version = ">=2.0.1", optional = true}
gcsfs = {version = ">=2023.12.0", optional = true}
s3fs = {version = ">=2023.12.0", optional = true}
torch = {version = ">=1.13.1", optional = true}
zarr = {version = ">=2.16.1", optional = true}
pyarrow = {version = ">=14.0.1", optional = true}  # dependabot: GHSA-5wvp-7f3h-6wmm

[tool.poetry.group.dev.dependencies]
autopep8 = "1.7.0"
black = "22.8.0"
faker = ">=21.0.0"
hypothesis = ">=6.91.1"
pip-tools = ">=7.3.0"
pre-commit = "^2.16.0"
pytest = "^7.0.2"
pytest-timeout = ">=2.2.0"
pytest-cov = "*"
pytest-xdist = "^3.2.0"
scipy = "*"
twine = "^4.0.2"
wandb = "0.16.1"
wheel = "^0.38.4"
#mlflow = ">=2.1.1"

[tool.poetry.group.doc.dependencies]
sphinx = "5.0.0"    # pin for faster resolution
jinja2 = ">2.7.2"     # dependabot: GHSA-fqh9-2qgg-h84h
click = "^8.0.0"    # pin for faster resolution any between 8.0.0 and 8.1.0 should work
sphinx-versions = "1.1.3"   # pin for faster resolution - package does no longer seem to be maintained
sphinx-rtd-theme = "2.0.0"  # pin for faster resolution any smaller should also work
sphinx-autoapi = "2.0.0"    # pin for faster resolution any smaller should also work, larger requires sphinx >=5.2.0
sphinxcontrib-mermaid = "0.9.2"  # pin for faster resolution any smaller should also work
myst-nb = "0.17.2"  # pin for faster resolution any <1.0.0 should work

[tool.poetry.extras]
azure = ["adlfs"]
dask = ["dask"]
excel = ["odfpy", "openpyxl", "pyxlsb", "xlrd"]
feather = ["pyarrow"]
gcp = ["gcsfs"]
parquet = ["pyarrow"]
s3 = ["s3fs"]
torch = ["torch"]
zarr = ["zarr"]
all = ["adlfs", "dask", "odfpy", "openpyxl", "pyxlsb", "xlrd", "pyarrow", "gcsfs", "s3fs", "torch", "zarr"]
numba = ["numba"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 120
ignore="E265,E501,E203"
in-place = true
recursive = true

[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = [
    "test",
    "squirrel/integration_test",
]
addopts = "-p no:warnings -v"
norecursedirs = [
    ".*",
    "build",
    "dist",
    "CVS",
    "_darcs",
    "{arch}",
    "*.egg",
]
